[package]
name = "atomic-interval"
version = "0.1.4"
license = "MIT OR Apache-2.0"
authors = ["Biagio Festa"]
edition = "2021"
description = "A tiny implementation of an atomic timer."
keywords = ["time", "interval", "timer", "atomic", "lock-free"]
repository = "https://github.com/BiagioFesta/atomic-interval"
readme = "README.md"

[dependencies]
quanta = "0.12.2"

[dev-dependencies]
num_cpus = "1.16.0"
once_cell = "1.19.0"
rand = "0.8.5"
